<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/margin_10">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/subscription_reminder_note1"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/subscription_reminder_note2"
        android:layout_marginTop="@dimen/margin_20"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_buyNow_subscription_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_70"
        android:layout_marginTop="@dimen/margin_30"
        android:background="@drawable/btn_border"
        android:text="@string/buyNow"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>