<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.OtpVerifyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_otp_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_toolbar_gradient">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verify_otp"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/toolbarText" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_loginLogo"
        android:layout_width="@dimen/size_100dp"
        android:layout_height="@dimen/size_100dp"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_gravity="center"
        android:src="@drawable/profile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/verify_otp_text"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/margin_20"/>

    <com.goodiebag.pinview.Pinview
        android:id="@+id/pinview"
        app:pinBackground="@drawable/pinview_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:pinWidth="40dp"
        app:pinHeight="40dp"
        android:layout_gravity="center"
        app:pinLength="4"
        app:cursorVisible="true"
        app:forceKeyboard="true"
        app:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_10"
        android:weightSum="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="if you did't receive"
            android:textColor="@color/colorPrimary"
            android:gravity="end"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/margin_5"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_verify_otpVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/btn_border"
        android:textAllCaps="false"
        android:text="@string/verify"
        android:textColor="@android:color/white" />

</LinearLayout>