<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MySubscriptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_mySubscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_toolbar_gradient">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_subscription"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/toolbarText" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_20"
    android:layout_marginTop="@dimen/margin_10"
    android:orientation="vertical">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:visibility="gone"
        android:src="@drawable/bluetooth_logo"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No active plan"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/margin_10"
        android:textSize="@dimen/text_size_16"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/date_of_purchase"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/tv_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textStyle="bold"
            android:text="dd-Mon-yyyy"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:layout_marginTop="@dimen/margin_2"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="Expiration date"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/tv_expiryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textStyle="bold"
            android:text="dd-Mon-yyyy"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:layout_marginTop="@dimen/margin_2"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amount"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/tv_ammount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textStyle="bold"
            android:text="$0"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:layout_marginTop="@dimen/margin_2"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/margin_20"/>

    <Button
        android:id="@+id/btn_buyNewPlan_my_subscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/btn_border"
        android:textAllCaps="false"
        android:text="@string/buyNewPlan"
        android:textColor="@android:color/white"  />
    <Button
        android:id="@+id/btn_cancel_my_subscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/btn_border"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@android:color/white"  />
    <Button
        android:id="@+id/btn_renew_my_subscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/btn_border"
        android:text="@string/renew"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</LinearLayout>
    </ScrollView>
</LinearLayout>