<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.TrialActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_trail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_toolbar_gradient">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Trial subscription"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/toolbarText" />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_50"
        android:src="@drawable/app_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Listen &amp; \nBe Heard"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/bluetoothAppTrial"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvDaysLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="07"
                android:textColor="@color/colorPrimary"
                android:textSize="80sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_weight="1"
                android:gravity="start"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/dayRemain"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/purchasingTrialText"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/margin_2"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_buy_trail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/btn_border"
                android:padding="@dimen/margin_5"
                android:text="@string/buy"
                android:layout_marginRight="@dimen/margin_10"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_startTrial_trail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/btn_border"
                android:padding="@dimen/margin_5"
                android:layout_marginLeft="@dimen/margin_10"
                android:text="@string/startTrial"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>
<TextView
    android:id="@+id/tvLoginAnother"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:text="Login Another User"
    android:textColor="@color/colorPrimary"
    android:textSize="@dimen/text_size_18"
    android:layout_marginTop="@dimen/margin_20"/>
    </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>